@@ -1,0 +1,32 @@
+node_modules
+build
+
+.git
+.gitignore
+.dockerignore
+.idea
+.vscode
+
+.terraform
+*.tf
+terraform.tfstate
+examples
+
+Vagrantfile
+Jenkinsfile
+.travis.yml
+.circleci
+
+pip.conf
+Pipfile
+Pipfile.lock
+
+_config.yml
+
+docker-compose.yml
+nginx.conf
+
+.DS_Store
+
+
+
