@@ -1,0 +1,18 @@
+version: '3.5'
+
+services:
+  client:
+    container_name: react
+    build:
+      context: .
+      dockerfile: Dockerfile
+    env_file:
+      - ./.env
+    volumes:
+      - '.:/usr/src/app'
+      - '/node_modules'
+    ports:
+      - '3000:3000'
+      - '35729:35729'
+    environment:
+      - NODE_ENV=development
