@@ -4,7 +4,9 @@ All notable changes to this project will be documented in this file.
 The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
-## [Unreleased] "Teeny Theodora"
+## [Unreleased] "Brave Bryna"
+### Added
+Run docker-compose
 
 ## [0.0.1] "Teeny Theodora" - 2019-02-22
 ### Added
